created pop up window

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Tech Com</string>
     <string name="but_1_name">Parse</string>
     <string name="but_2_name">Send</string>
+    <string name="company_des">Company Profile and Job Information for Google. Google was founded by Larry Page and Sergey Brin while they were students at Stanford University. ... These beliefs dominate life at Google. The official mission statement of the company is to “organize the world's information and make it universally accessible and useful.</string>
 </resources>
